...
        Email
    </string>
    <string name="prompt_password">
        Password
    </string>
    <string name="action_sign_in_short">
        Sign in
    </string>
    <string name="action_register">
        Register with the above details
    </string>
    <string name="logo_description">
        The Coinz logo.
...

    <!-- Strings related to the bottom navigation bar -->
    <string name="home_nav_button">
        Home
    </string>
    <string name="account_nav_button">
        Account
    </string>
    <string name="messaging_nav_button">
        Messages
    </string>

    <!-- Strings related to the BankActivity -->
    <string name="bankText">
        Hello and welcome to the bank!
    </string>
...
