<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/messaging_nav"
        android:icon="@drawable/messaging_nav_icon"
        android:title="@string/messaging_nav_button"/>

    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/home_nav_icon"
        android:title="@string/home_nav_button"/>

    <item
        android:id="@+id/account_nav"
        android:icon="@drawable/account_nav_icon"
        android:title="@string/account_nav_button"/>

</menu>